--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "my-v0-project",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
+    "server": "node server.js",
     "lint": "next lint"
   },
   "dependencies": {
@@ -41,8 +43,9 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "1.0.4",
-    "date-fns": "4.1.0",
+    "date-fns": "^2.30.0",
     "embla-carousel-react": "8.5.1",
+    "express": "^4.18.3",
     "input-otp": "1.4.1",
     "lucide-react": "^0.454.0",
     "next": "15.2.4",
@@ -57,14 +60,8 @@
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.6",
-    "zod": "^3.24.1",
-    "express": "latest",
-    "node-fetch": "latest",
-    "socket.io-client": "latest",
-    "http": "latest",
-    "socket.io": "latest",
-    "url": "latest",
-    "path": "latest"
+    "ws": "^8.16.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/node": "^22",
