--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "type": "module",
   "scripts": {
+    "setup": "node setup.js",
     "server": "node server.js",
     "simulate": "node simulate-data.js"
   },
@@ -11,6 +12,7 @@
     "express": "^4.18.3",
     "cors": "^2.8.5",
     "ws": "^8.16.0",
-    "node-fetch": "^3.3.2"
+    "node-fetch": "^3.3.2",
+    "dotenv": "^16.3.1"
   }
 }
