--- a/package.json
+++ b/package.json
@@ -4,13 +4,34 @@
   "private": true,
   "type": "module",
   "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
     "server": "node server.js",
     "simulate": "node simulate-data.js"
   },
   "dependencies": {
-    "express": "^4.18.3",
+    "@radix-ui/react-switch": "^1.0.3",
+    "clsx": "^2.1.1",
     "cors": "^2.8.5",
-    "ws": "^8.16.0",
-    "node-fetch": "^3.3.2"
+    "express": "^4.18.3",
+    "next": "^15.3.2",
+    "next-themes": "^0.4.6",
+    "node-fetch": "^3.3.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "recharts": "^2.15.3",
+    "tailwind-merge": "^3.2.0",
+    "tailwindcss": "^3.3.0",
+    "tailwindcss-animate": "^1.0.7",
+    "ws": "^8.16.0"
+  },
+  "devDependencies": {
+    "@types/node": "^20.0.0",
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.31",
+    "typescript": "^5.0.0"
   }
 }
