--- a/package.json
+++ b/package.json
@@ -12,9 +12,10 @@
   },
   "dependencies": {
     "@radix-ui/react-switch": "^1.0.3",
+    "body-parser": "^2.2.0",
     "clsx": "^2.1.1",
     "cors": "^2.8.5",
-    "express": "^4.18.3",
+    "express": "^4.21.2",
     "next": "^15.3.2",
     "next-themes": "^0.4.6",
     "node-fetch": "^3.3.2",
