--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
+/app
+/components
+/lib
 /node_modules
+/styles
 
 # next.js
 /.next/
@@ -18,6 +22,7 @@ yarn-error.log*
 
 # env files
 .env*
+next.config.mjs
 
 # vercel
 .vercel
